[tool.poetry]
name = "car-accident-db-process"
version = "0.1.0"
description = ""
authors = ["xi455 <xi455@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.21"
pyodbc = "^5.0.1"
psycopg2-binary = "^2.9.9"
boto3 = "^1.26.156"
django-environ = "^0.11.2"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
  | migrations
)/
'''
